--- a/mobile/direct_01_1.html
+++ b/mobile/direct_01_1.html
@@ -34,7 +34,7 @@
     <!-- layout--header 견적// -->
 	<div class="layout--header">
 		<header>
-            <a href="./car-detail.html" class="ir bt-page-prev">뒤로가기</a>
+            <a href="./direct_01.html" class="ir bt-page-prev">뒤로가기</a>
 			<h2 class="page-title">계약</h2>
 		</header>
 		<div class="side-menu " id="sideMenu">
