--- a/mobile/car-detail.html
+++ b/mobile/car-detail.html
@@ -744,7 +744,7 @@
 								<ul class="list-type-vertical">
 									<!-- loop// -->
 									<li class="list-item">
-										<div class="list-thumb">
+										<div class="list-thumb saleType">
 											<a href="#">
 												<img src="./images/test/LFILE_000012420120240311112158.png" alt="차량이미지">
 											</a>
@@ -771,7 +771,7 @@
 									</li>
 									<!-- //loop -->
 									<li class="list-item">
-										<div class="list-thumb">
+										<div class="list-thumb rentType">
 											<a href="#">
 												<img src="./images/test/LFILE_000019610520240617130359.png" alt="차량이미지">
 											</a>
