--- a/mobile/main.html
+++ b/mobile/main.html
@@ -1965,37 +1965,57 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <script>
 
-        var mHtml = $("html");
-        var page = 1;
-        var isScrolling = false;  // 스크롤 중인지 확인하는 플래그
-        mHtml.animate({scrollTop: 0}, 10);
+var mHtml = $("html");
+var page = 1;
+var isScrolling = false;  // 스크롤 중인지 확인하는 플래그
+var touchStartY = 0;  // 터치 시작 위치
+var touchEndY = 0;    // 터치 끝 위치
 
-        $(window).on("wheel", function(e) {
-            if (isScrolling) return;  // 스크롤 중이면 중복 실행 방지
-            if (mHtml.is(":animated")) return;
+mHtml.animate({scrollTop: 0}, 10);
 
-            if (e.originalEvent.deltaY > 0) {  // 스크롤 내릴 때
-                if (page == 2) return;  // 페이지 2에서 더 이상 내리지 않음
-                page++;
-            } else if (e.originalEvent.deltaY < 0) {  // 스크롤 올릴 때
-                if (page == 1) return;  // 첫 번째 페이지에서는 더 이상 올리지 않음
+// PC에서 휠 스크롤 이벤트 처리
+$(window).on("wheel", function(e) {
+    handleScroll(e.originalEvent.deltaY > 0 ? 'down' : 'up');
+});
 
-                if (page == 2) {
-                    // 현재 스크롤 위치가 페이지의 맨 위(top)인 경우에만 첫 번째 페이지로 이동
-                    if ($(window).scrollTop() == $(window).height()) {
-                        page--;
-                    } else {
-                        return;  // top이 아니라면 기본 스크롤 동작 유지
-                    }
-                }
+// 모바일 터치 이벤트 처리
+$(window).on("touchstart", function(e) {
+    touchStartY = e.originalEvent.touches[0].clientY;  // 터치 시작 위치 기록
+});
+
+$(window).on("touchend", function(e) {
+    touchEndY = e.originalEvent.changedTouches[0].clientY;  // 터치 끝 위치 기록
+    var swipeDirection = touchStartY > touchEndY ? 'down' : 'up';
+    handleScroll(swipeDirection);
+});
+
+// 스크롤 핸들링 함수 (wheel과 touch 공용)
+function handleScroll(direction) {
+    if (isScrolling) return;  // 스크롤 중이면 중복 실행 방지
+    if (mHtml.is(":animated")) return;
+
+    if (direction === 'down') {  // 스크롤 내릴 때
+        if (page == 2) return;  // 페이지 2에서 더 이상 내리지 않음
+        page++;
+    } else if (direction === 'up') {  // 스크롤 올릴 때
+        if (page == 1) return;  // 첫 번째 페이지에서는 더 이상 올리지 않음
+
+        if (page == 2) {
+            // 현재 스크롤 위치가 페이지의 맨 위(top)인 경우에만 첫 번째 페이지로 이동
+            if ($(window).scrollTop() === $(window).height()) {
+                page--;
+            } else {
+                return;  // top이 아니라면 기본 스크롤 동작 유지
             }
+        }
+    }
 
-            var posTop = (page - 1) * $(window).height();
-            isScrolling = true;  // 스크롤 시작
-            mHtml.animate({scrollTop: posTop}, 500, function() {
-                isScrolling = false;  // 스크롤 끝나면 플래그 해제
-            });
-        });
+    var posTop = (page - 1) * $(window).height();
+    isScrolling = true;  // 스크롤 시작
+    mHtml.animate({scrollTop: posTop}, 500, function() {
+        isScrolling = false;  // 스크롤 끝나면 플래그 해제
+    });
+}
 
         $(document).ready(function() {
         
