--- a/mobile/car-detail.html
+++ b/mobile/car-detail.html
@@ -387,6 +387,22 @@
 											</p>
 											<p class="option-price"><em>300,000</em>원</p>
 										</li>
+										<li>
+											<p class="option-name common-layer-group">
+												<span class="option-value">용품</span>
+												<span class="option-title">루마 GG 35%(전면 썬팅)</span>
+												<button type="button" class="ir common-layer-bt">툴팁보기</button>
+											</p>
+											<p class="option-price"><em>300,000</em>원</p>
+										</li>
+										<li>
+											<p class="option-name common-layer-group">
+												<span class="option-value">용품</span>
+												<span class="option-title">루마 GG 15%(측,후면썬팅)</span>
+												<button type="button" class="ir common-layer-bt">툴팁보기</button>
+											</p>
+											<p class="option-price"><em>150,000</em>원</p>
+										</li>
 									</ul>
 								</div>
 								<div class="option-comment">
@@ -913,7 +929,7 @@
 												<!--warranty price-->
 												<div class="warranty-price">
 													<div class="title">
-														<h3>롯데 Warranty</h3>
+														<h3>연장보증상품</h3>
 														<span class="more">자세히보기</span>
 													</div>
 													<div class="radio-wrap">
