--- a/mobile/direct_01.html
+++ b/mobile/direct_01.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <ul class="detail-list">
-                <li class="carinfo">
+                <li class="carinfo" style="border-right:0; border-bottom:0;">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -188,15 +188,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="caroption">
-                    <a href="#">
-                        <div class="img-wrap"></div>
-                        <p>
-                            <strong>옵션정보 확인</strong>
-                        </p>
-                    </a>
-                </li>
-                <li class="history">
+                <li class="history" style="border-bottom:0;">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -204,7 +196,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="carcheck">
+                <li class="carcheck" style="border-right:0;">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -375,7 +367,7 @@
     </div>
     <div class="btn-wrap">
         <button type="button">상담 신청하기</button>
-        <button type="button" class="contract" onclick="location.href='./direct_01_1.html'">다음</button>
+        <button type="button" class="light" onclick="location.href='./direct_01_1.html'">다음</button>
     </div>
 </div>
 
