--- a/mobile/direct_01_1.html
+++ b/mobile/direct_01_1.html
@@ -216,7 +216,7 @@
                 </div>
             </div>
 
-            <div class="sec-tit">
+            <!-- <div class="sec-tit">
                 <div class="flex">
                     <h1>사업자정보</h1>
                 </div>
@@ -245,7 +245,7 @@
                         <span>정보통신서비스</span>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </section>
 
 
@@ -257,11 +257,11 @@
                     </div>
                 </div>
                 <div class="tab type01">
-                    <button type="button" data-tab="tab1" class="" onclick="activateTab('tab1');">단독명의로 구매해요</button>
-                    <button type="button" data-tab="tab2" class="on" onclick="activateTab('tab2');">공동명의자가 있어요</button>
+                    <button type="button" data-tab="tab1" class="on" onclick="activateTab('tab1');">단독명의로 구매해요</button>
+                    <button type="button" data-tab="tab2" class="" onclick="activateTab('tab2');">공동명의자가 있어요</button>
                 </div>
-                <div class="tab-content" id="tab1"></div>
-                <div class="tab-content on" id="tab2">
+                <div class="tab-content on" id="tab1"></div>
+                <div class="tab-content" id="tab2">
                     <div class="input-item">
                         <p class="tit">개인/사업자 선택<em class="ess">*</em></p>
                         <select id="income">
@@ -360,7 +360,7 @@
         </div>
         <div class="btn-wrap">
             <button type="button">상담 신청하기</button>
-            <button type="button" class="contract" onclick="location.href='./direct_01_2.html'">다음</button>
+            <button type="button" class="light" onclick="location.href='./direct_01_2.html'">다음</button>
         </div>
     </div>
 
