--- a/mobile/main.html
+++ b/mobile/main.html
@@ -397,6 +397,11 @@
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide">
                                     <div class="imgBx">
+                                        <img src="./images/renew/mo_service_banner_00.png">
+                                    </div>          
+                                </li>
+                                <li class="swiper-slide">
+                                    <div class="imgBx">
                                         <img src="./images/renew/mo_service_banner_01.png">
                                     </div>          
                                 </li>       
@@ -1855,7 +1860,7 @@ document.addEventListener('DOMContentLoaded', function () {
             },
         });
 
-        let menu = ['투명한 차량정보', '비대면 홈서비스', '품질연장보증', '차량방문정비 서비스'];
+        let menu = ['중고차 구매 서비스', '투명한 차량정보', '비대면 홈서비스', '품질연장보증', '차량방문정비 서비스'];
         let secretSlide = new Swiper(".secretSlide", {
             slidesPerView: 1.3,
             observer: true,
