--- a/pc/main.html
+++ b/pc/main.html
@@ -895,6 +895,11 @@
 						<ul class="swiper-wrapper">
 							<li class="swiper-slide">
 								<div class="imgBx">
+									<img src="../pc/images/renew/main_service_info_00.png">
+								</div>			
+							</li>
+							<li class="swiper-slide">
+								<div class="imgBx">
 									<img src="../pc/images/renew/main_service_info_01.png">
 								</div>			
 							</li>		
@@ -917,7 +922,7 @@
 						<div class="swiper-scrollbar"></div>	
 					</div>
 					<script>
-							var menu = ['투명한 차량정보', '비대면 홈서비스', '품질연장보증','차량방문정비 서비스']
+							var menu = ['중고차 구매 서비스', '투명한 차량정보', '비대면 홈서비스', '품질연장보증', '차량방문정비 서비스'];
 							var secretSlide = new Swiper(".secretSlide", {
 								//effect: 'fade',
 								//loop: true,
