--- a/pc/sub.html
+++ b/pc/sub.html
@@ -433,24 +433,25 @@
 									</ul>
 								</div>
 								<div id="colorField" class="condition-item item-color-outside unfold" data-fold="foldable">
-									<h3 class="item-title">색상<button type="button" class="ir bt-flip">목록열기</button></h3>
+									<h3 class="item-title">외장색상<button type="button" class="ir bt-flip">목록열기</button></h3>
 									<ul class="select-type-color">
+										<li><button type="button" id="color_C002" class="bt-item" value="C002"><var
+											style="background-color: rgb(255, 255, 255);"></var></button>
+										</li>
 										<li><button type="button" id="color_C001" class="bt-item" value="C001"><var
-													style="background-color: rgb(0, 0, 0);"></var><span>검정</span></button>
+													style="background-color: rgb(0, 0, 0);"></var></button>
 										</li>
 										<li><button type="button" id="color_C005" class="bt-item" value="C005"><var
-													style="background-color: rgb(97, 97, 97);"></var><span>회색</span></button>
+													style="background-color: rgb(97, 97, 97);"></var></button>
 										</li>
 										<li><button type="button" id="color_C006" class="bt-item" value="C006"><var
-													style="background-color: rgb(122, 119, 119);"></var><span>쥐색</span></button>
+													style="background-color: #184EBA;"></var></button>
 										</li>
 										<li><button type="button" id="color_C003" class="bt-item" value="C003"><var
-													style="background-color: rgb(176, 176, 176);"></var><span>은색</span></button>
+													style="background-color: #C4191C;"></var></button>
 										</li>
-										<li><button type="button" id="color_C002" class="bt-item" value="C002"><var
-													style="background-color: rgb(255, 255, 255);"></var><span>흰색</span></button>
-										</li>
-										<li><button type="button" class="bt-item bt-more"><var></var><span></span></button>
+
+										<li><button type="button" class="bt-item bt-more"><var></var></button>
 										</li>
 										<div class="layer-view-color outcolor" id="outColorAll"
 											style="display: none; min-height: 345px;">
