--- a/pc/view.html
+++ b/pc/view.html
@@ -237,14 +237,14 @@
 										</div>
 									</div>
 								</div>
-								<div id="mCSB_1_scrollbar_vertical" class="mCSB_scrollTools mCSB_1_scrollbar mCS-light mCSB_scrollTools_vertical" style="display: block;">
+								<!-- <div id="mCSB_1_scrollbar_vertical" class="mCSB_scrollTools mCSB_1_scrollbar mCS-light mCSB_scrollTools_vertical" style="display: block;">
 									<div class="mCSB_draggerContainer">
 										<div id="mCSB_1_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 30px; display: block; height: 278px; max-height: 872px; top: 0px;">
 											<div class="mCSB_dragger_bar" style="line-height: 30px;"></div>
 										</div>
 										<div class="mCSB_draggerRail"></div>
 									</div>
-								</div>
+								</div> -->
 						</div>
 						</section>
 						<section class="section-right fixed">
@@ -657,7 +657,7 @@
 										</button>
 										<p class="tips-box"><span>· 보증·선납금을 제외한 정비, 보험, 세금 등이 포함된 금액입니다.</span><span>· 개인별 신용조건에 따라 담보 및 대여료가 달라질 수 있습니다.</span><span>· 보험연령 만 26세 이상 기준 표준대여료 입니다.</span><span>· 대인보상 : 무제한 / 대물배상 : 1억원 / 자손보상 : 1억원<button class="btn-link">자세히보기</button></span></p> -->
 									<div class="benefits-container">
-										<a href="/cs/aboutrentcar"><img src="../mobile/images/renew/warranty_img.png" alt="구매혜택 이미지"></a>
+										<a href="/cs/aboutrentcar"><img src="./images/sub/sub_ew.png" alt="구매혜택 이미지"></a>
 									</div>
 								</div>
 								<div class="car-seller area">
@@ -683,6 +683,15 @@
 										</div>
 										<button type="button" class="bt-view-toggle view">차량설명 전체보기</button>
 									</div>
+									<div class="pre-number">
+										<p>제시번호 : </p>
+										<span>2024058213</span>
+										<p style="margin-left:6px;">종사원번호 : </p>
+										<span> 경기-1234-1234</span>
+									</div>
+									<style>
+										.pre-number{margin-top:15px; display:flex; font-size:14px; color:#666;}
+									</style>
 								</div>
 							</div>
 						</section>
@@ -691,7 +700,7 @@
 				<div class="list-content mt60" style="position:relative; z-index:999; background:#fff; padding:30px 0;">
 					<h3 class="list-title">유사한 차량</h3>
 					<ul class="list-type-vertical n4 noMg">
-						<li class="list-item">
+						<li class="list-item" style="margin-right:0;">
 							<div class="list-thumb">
 								<a class="link-detail-view cursor-pointer" data-p2p="false" data-carid="10332" style="overflow: hidden;">
 									<div class="car-thumb-slider swiper-container">
@@ -713,10 +722,13 @@
 									<div class="price">
 										<p class="prc">월<var>484,000</var>원</p><span class="type">/ <em>24개월</em></span></div>
 								</div>
-								<div class="badge" style="margin-top:20px;"><span class="ele-badge badge-type3">무사고</span></div>
+								<div class="badge" style="margin-top:20px;">
+									<span class="ele-badge badge-type3">무사고</span>
+									<span class="ele-badge badge-type3">정기관리</span>
+								</div>
 							</div>
 						</li>
-						<li class="list-item">
+						<li class="list-item" style="margin-right:0;">
 							<div class="list-thumb">
 								<a class="link-detail-view cursor-pointer" data-p2p="false" data-carid="9637" style="overflow: hidden;">
 									<div class="car-thumb-slider swiper-container">
@@ -741,7 +753,7 @@
 								<div class="badge" style="margin-top:20px;"><span class="ele-badge badge-type3">무사고</span></div>
 							</div>
 						</li>
-						<li class="list-item">
+						<li class="list-item" style="margin-right:0;">
 							<div class="list-thumb">
 								<a class="link-detail-view cursor-pointer" data-p2p="false" data-carid="8287" style="overflow: hidden;">
 									<div class="car-thumb-slider swiper-container">
@@ -766,7 +778,7 @@
 								<div class="badge" style="margin-top:20px;"><span class="ele-badge badge-type3">무사고</span></div>
 							</div>
 						</li>
-						<li class="list-item">
+						<li class="list-item" style="margin-right:0;">
 							<div class="list-thumb">
 								<a class="link-detail-view cursor-pointer" data-p2p="false" data-carid="7815" style="overflow: hidden;">
 									<div class="car-thumb-slider swiper-container">
