--- a/mobile/direct_01_2.html
+++ b/mobile/direct_01_2.html
@@ -318,12 +318,12 @@
                 <dl>
                     <dt>총 예상 결제금액</dt>
                 </dl>
-                <strong><span>30,580,000원</span></strong>
+                <strong><span>49,905,000원</span></strong>
             </div>
         </div>
         <div class="btn-wrap">
             <button type="button">상담 신청하기</button>
-            <button type="button" class="contract" onclick="location.href='./direct_01_3.html'">다음</button>
+            <button type="button" class="light" onclick="location.href='./direct_01_3.html'">다음</button>
         </div>
     </div>
 </body>
