--- a/mobile/direct_01_3.html
+++ b/mobile/direct_01_3.html
@@ -186,7 +186,7 @@
             <ul>
                 <li>
                     <p>총 결제 금액</p>
-                    <span>30,635,000원</span>
+                    <span>49,905,000원</span>
                 </li>
             </ul>
         </div>
@@ -202,7 +202,7 @@
     <div class="layer_popup custom-alert-pop">
         <div class="btn-wrap">
             <button type="button">상담 신청하기</button>
-            <button type="button" class="contract" onclick="location.href='./direct_02.html'">바로 결제</button>
+            <button type="button" class="contract" onclick="location.href='main.html'">바로 결제</button>
         </div>
     </div>
 </body>
