매도수수료 > 관리비용으로 변경

--- a/mobile/car-detail.html
+++ b/mobile/car-detail.html
@@ -893,14 +893,14 @@
 													</li>
 													<li>
 														<div class="s-title-wrap" style="margin:0; width:60%;">
-															<h3 class="s-title">매도수수료
+															<h3 class="s-title">관리비
 																<div class="common-layer-group-conv posTop">
 																	<button type="button" class="ir common-layer-bt-conv">툴팁보기</button>
 																	<div class="layer_popup_wrappper vM">
 																		<div class="layer_popup bg">
 																			<div class="pop_inner">
 																				<div class="pop-head">
-																					<h3 class="pop-title">매도수수료란?</h3>
+																					<h3 class="pop-title">관리비란?</h3>
 																					<a href="#" class="ir pop_close">닫기</a>
 																				</div>
 																				<div class="pop-contents">
