--- a/mobile/direct_01_1.html
+++ b/mobile/direct_01_1.html
@@ -340,7 +340,7 @@
                                 <span>1,250,000원</span>
                             </li>
                             <li>
-                                <div class="tit">매도수수료</div>
+                                <div class="tit">관리비</div>
                                 <span>100,000원</span>
                             </li>
                             <li>
