--- a/mobile/direct_01_2.html
+++ b/mobile/direct_01_2.html
@@ -290,25 +290,25 @@
             <div class="pop-contents agree-accordion-wrap">
                 <!-- 견적박스 -->
                 <div class="price-box">
-                    <h3 class="pop-tit">다이렉트 견적</h3>
-                    <h4>제네시스 더 올뉴 G80 가솔린 2.5 2WD 기본형</h4>
+                    <!-- <h3 class="pop-tit">다이렉트 견적</h3>
+                    <h4>제네시스 더 올뉴 G80 가솔린 2.5 2WD 기본형</h4> -->
                     <div class="ex-box">
                         <ul>
                             <li>
-                                <div class="tit">신차가</div>
+                                <div class="tit">차량판매가</div>
                                 <span>48,500,000원</span>
                             </li>
                             <li>
-                                <div class="tit">선납금</div>
-                                <span>7,650,000원 (30%)</span>
+                                <div class="tit">이전등록비</div>
+                                <span>1,250,000원</span>
                             </li>
                             <li>
-                                <div class="tit">보증금</div>
-                                <span>0원 (0%)</span>
+                                <div class="tit">관리비</div>
+                                <span>100,000원</span>
                             </li>
                             <li>
-                                <div class="tit">인수가</div>
-                                <span>17,650,000원</span>
+                                <div class="tit">탁송료</div>
+                                <span>55,000원</span>
                             </li>
                         </ul>
                     </div>
