--- a/mobile/direct_01_3.html
+++ b/mobile/direct_01_3.html
@@ -169,8 +169,8 @@
                     <span>200,000원</span>
                 </li>
                 <li>
-                    <p>매도수수료</p>
-                    <span>100,000원</span>
+                    <p>관리비</p>
+                    <span>440,000원</span>
                 </li>
                 <li>
                     <p>탁송료</p>
