--- a/mobile/main.html
+++ b/mobile/main.html
@@ -186,8 +186,8 @@
                     </div>
                     <div class="main_bg_video">
                       <video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
-                        <source src="./images/main_visual_2.mp4" type="video/mp4" />
-                        <source src="./images/main_visual_2.webm" type="video/webm" />
+                        <source src="./images/main_visual_effect.mp4" type="video/mp4" />
+                        <source src="./images/main_visual_effect.webm" type="video/webm" />
                       </video>
                     </div>
 
