--- a/pc/main.html
+++ b/pc/main.html
@@ -157,8 +157,8 @@
 						</a>
 						<div class="main_bg_video">
 							<video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
-							  <source src="../mobile/images/main_visual.mp4" type="video/mp4" />
-							  <source src="img/video.webm" type="video/webm" />
+							  <source src="../mobile/images/main_visual_effect.mp4" type="video/mp4" />
+							  <source src="../mobile/images/main_visual_effect.webm" type="video/webm" />
 							</video>
 						</div>
 					</div>
