--- a/mobile/main.html
+++ b/mobile/main.html
@@ -191,7 +191,7 @@
                       </video>
                     </div>
 
-                    <!-- <div class="vsRight">
+                    <!-- <div class="vsRight"> 수정본
                         <a href="./rent_list.html">
                             <h3 class="vsTit">렌트하기</h3>
                             <span class="vsEx">초기 비용 없이<br>계약까지 단 5분!</span>
