--- a/pc/main.html
+++ b/pc/main.html
@@ -109,7 +109,7 @@
 							<ul class="sub-menu">
 								<li><a href="/cs/noti/list">공지사항</a></li>
 								<li><a href="/cs/faq/list">FAQ</a></li>
-								<!-- <li><a href="/cs/event/list">이벤트</a></li> -->
+								<!-- <li><a href="/cs/event/list">이벤트</a></li> 수정본-->
 								<li><a href="/cr/theme/list">기획전</a></li>
 								<li><a href="/co/compare/main">비교하기</a></li>
 								<!-- <li><a href="/mypage/interest/rcntList">최근 본 차량</a></li>-->
