--- a/pc/main.html
+++ b/pc/main.html
@@ -156,7 +156,7 @@
 							<i class="btnAroow"></i> 
 						</a>
 						<div class="main_bg_video">
-							<video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
+							<video class="main_video_content" autoplay muted loop playsinline poster="./images/main_poster_img.png">
 							  <source src="../mobile/images/main_visual_effect.mp4" type="video/mp4" />
 							  <source src="../mobile/images/main_visual_effect.webm" type="video/webm" />
 							</video>
