--- a/mobile/main.html
+++ b/mobile/main.html
@@ -185,7 +185,7 @@
                         </a>
                     </div>
                     <div class="main_bg_video">
-                      <video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
+                      <video class="main_video_content" autoplay muted loop playsinline poster="./images/main_poster_img.png">
                         <source src="./images/main_visual_effect.mp4" type="video/mp4" />
                         <source src="./images/main_visual_effect.webm" type="video/webm" />
                       </video>
